# meow

./: Cargo.toml  PROMPT.md  README.md  ROADMAP.md  SCHEMA.md  VERSIONING.md  module.nix  package.nix  shell.nix  version.toml
src/: cli.rs  color.rs  commands.rs  config.rs  crypto.rs  git.rs  github.rs  lib.rs  lsp.rs  main.rs  mirror.rs  picker.rs  sparse.rs  web.rs
src/markdown/: claude.rs  command.rs  custom.rs  format.rs  journal.rs  mod.rs  parse.rs  readme.rs  roadmap.rs  schema.rs  skill.rs  style.rs
src/templates/: cargo-ci.yaml  cargo-release.yaml  pnpm-ci.yaml
tests/: git_tests.rs  sparse_tests.rs
