[package]
name = "meow"
version = "0.0.0-dev"
edition = "2021"

[lints.rust]
unsafe_code = "forbid"
unsafe_op_in_unsafe_fn = "forbid"
non_ascii_idents = "forbid"
missing_unsafe_on_extern = "forbid"
unused_results = "warn"
missing_debug_implementations = "warn"
variant_size_differences = "warn"

[lints.clippy]
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
print_stdout = "deny"
print_stderr = "deny"
exit = "deny"

[dependencies]
aes-gcm = "0.10"
anyhow = "1.0"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
dirs = "5"
git2 = "0.18"
gray_matter = "0.2"
inquire = "0.9"
pathdiff = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
indexmap = { version = "2", features = ["serde"] }
termimad = "0.30"
pulldown-cmark = "0.12"
rand = "0.8"
walkdir = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
fuzzy-matcher = "0.3"
is-terminal = "0.4"

[dev-dependencies]
tempfile = "3"
