[package]
name = "meow"
version = "0.0.0-dev"
edition = "2021"

[lints.rust]
unsafe_code = "forbid"
unsafe_op_in_unsafe_fn = "forbid"
non_ascii_idents = "forbid"
missing_unsafe_on_extern = "forbid"
unused_results = "warn"
missing_debug_implementations = "warn"
variant_size_differences = "warn"

[lints.clippy]
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
print_stdout = "deny"
print_stderr = "deny"
exit = "deny"

[dependencies]
aes-gcm = "0.10"
anyhow = "1.0"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
dirs = "5"
git2 = "0.18"
gray_matter = "0.2"
inquire = "0.9"
pathdiff = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
indexmap = { version = "2", features = ["serde"] }
termimad = "0.30"
pulldown-cmark = "0.12"
rand = "0.8"
regex = "1"
walkdir = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
fuzzy-matcher = "0.3"
is-terminal = "0.4"
lsp-server = "0.7"
lsp-types = "0.97"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-no-provider"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "tokio"] }
http-body-util = "0.1"
rustls = { version = "0.23", features = ["aws-lc-rs"] }
rustls-pemfile = "2"
tokio-rustls = "0.26"
bytes = "1"

[dev-dependencies]
tempfile = "3"
